tests/golden/parse_errors/import_missing_semicolon.err
Parse error at /home/junhe/compiler/tests/golden/parse_errors/import_missing_semicolon.cd:1:18: expected `;` after import path, found EndOfFile
  import "./lib.cd"
                   ^
